Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- The mail notification now also sends mail to unconfirmed attendees.
Bug fixes:
~~~~~~~~~~
- It was impossible to change the event type after creation.
- The montly display for was incorrect if the viewed day was in the end
  of march.
- February could be skippad completely when navigating in monthly view,
  in really unlucky cases. Rewrote that part, with a new skin method,
  calendar_getPrevNextPage.py.
- Trying to get an email for orphaned members raises a key error. I now
  trap this.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-