@@ -1,44 +1,41 @@
-##parameters=event_dict, calendar_url, calendar_title, event_title, mail_from, reply_to, mails, new_event
+##parameters=event_dict, calendar_url, calendar_title, event_title, new_event
 
 mcat = context.Localizer.cpscalendar
 request = event_dict['request']
 confirm_url = '%s/calendar_pending_events?event_id=%s' % (calendar_url, event_dict['id'])
 
-calendar_title = mcat(calendar_title)
+# Personal calendars have a tendency to have titles ending in the ordinal 160.
+# That doesn't work.
+if ord(calendar_title[-1]):
+    calendar_title = calendar_title[:-1]
+else:
+    calendar_title = mcat(calendar_title.strip())
 event_title = mcat(event_title)
 
 header = """\
-From: %s
-To: %s
-Reply-To: %s
-Subject: [CAL] %s
 Content-Type: text/plain; charset=ISO-8859-15
-
 Mime-Version: 1.0
-""" % (mail_from, reply_to, ', '.join(mails), event_title)
+
+"""
 
 if request == 'request':
     if new_event:
-        message = """
-%(calendar_title)s received a request for event "%(event_title)s".
-"""
+        message = mcat('cpscalendar_mailnotify_request')
     else:
-        message = """
-%(calendar_title)s received an update for event "%(event_title)s".
-"""
+        message = mcat('cpscalendar_mailnotify_update')
+
     message = message % {
         'calendar_title': calendar_title,
         'event_title': event_title,
     }
     comment = event_dict['event']['comment'].strip()
     if comment:
-        message += """
-Comment:
-%(comment)s""" % {'comment': comment}
+        message += '\n' + mcat('cpscalendar_mailnotify_comment') + '\n' + comment
+
 elif request == 'status':
     attendees = event_dict['change']
-    message = """
-Calendar for %(calendar_title)s received a status update for event "%(event_title)s":""" % {
+    message = mcat('cpscalendar_mailnotify_status_update')
+    message = message % {
         'calendar_title': calendar_title,
         'event_title': event_title,
     }
@@ -46,12 +43,8 @@ Calendar for %(calendar_title)s received a status update for event "%(event_titl
         message += ("\n  - %s (%s)" % (att.get('cn', att['attendee']), att['status']))
         comment = att['comment'].strip()
         if comment:
-            message += """
-Comment:
-%(comment)s""" % {'comment': comment}
+            message += '\n' + mcat('cpscalendar_mailnotify_comment') + '\n' + comment
 
-message += """
-Please confirm/commit by using this URL:
-%s""" % (confirm_url, )
+message += '\n' + mcat('cpscalendar_mailnotify_confirm_here') + '\n' + confirm_url
 
-return header+message
+return header+str(message)
