@@ -4,6 +4,7 @@ Requires:
 New features:
 ~~~~~~~~~~~~~
 - The mail notification now also sends mail to unconfirmed attendees.
+- The notify mail is now translatable.
 Bug fixes:
 ~~~~~~~~~~
 - It was impossible to change the event type after creation.
@@ -14,6 +15,7 @@ Bug fixes:
   calendar_getPrevNextPage.py.
 - Trying to get an email for orphaned members raises a key error. I now
   trap this.
+- Headers in the notification mails was calculated twice.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
